<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaukiTauki</string>
    <string name="mode_lower">abc</string>
    <string name="mode_title">Abc</string>
    <string name="mode_upper">ABC</string>
    <string name="mode_number">123?</string>
    <string name="mode_qwerty">qwe</string>
    <string name="label_swap">⟳</string>
    <string name="swap_indicator_format">%1$s→%2$s</string>
    <string name="word_with_space_format">%1$s </string>
    <string name="label_paste">📋</string>
    <string name="candidate_placeholder"></string>
    <string name="label_backspace">⌫</string>
    <string name="label_left">←</string>
    <string name="label_right">→</string>
    <string name="label_space_key">␣</string>
    <string name="label_enter">⏎</string>
    <string name="setup_step1_title">Enable TaukiTauki</string>
    <string name="setup_step1_desc">Turn it on in Settings → Manage keyboards</string>
    <string name="setup_step2_title">Select TaukiTauki</string>
    <string name="setup_step2_desc">Switch to it using the keyboard picker</string>
    <string name="setup_btn_enable">Open keyboard settings</string>
    <string name="setup_btn_switch">Switch to TaukiTauki</string>
    <string name="setup_btn_done">All set!</string>
    <string name="settings_activity_label">TaukiTauki Settings</string>
    <string name="settings_category_uncommon">Uncommon Basque letters</string>
    <string name="settings_category_latin">Latin / borrowed letters</string>
    <string name="settings_category_punctuation">Punctuation extras</string>
</resources>
